# rgb-interfaces

./: .gitignore  Cargo.toml  README.md  _typos.toml  flake.nix
.github/workflows/: build.yml  codecov.yml  lint.yml  run.yaml  test.yml
interfaces/: IfaceStd.con  IfaceStd.rgb  IfaceStd.rgba  RGB20.con  RGB20.rgb  RGB20.rgba  RGB21.con  RGB21.rgb  RGB21.rgba  RGB21@0.1.0.sta  RGB21@0.1.0.stl  RGB21@0.1.0.sty  RGB21@0.11.0.sta  RGB21@0.11.0.stl  RGB21@0.11.0.sty  RGB25.rgb  RGB25.rgba  RGBContract@0.11.0.sta  RGBContract@0.11.0.stl  RGBContract@0.11.0.sty  RGBStd.con  RGBStd.rgb  RGBStd.rgba
scripts/: typelib.sh
src/: alignments.rs  dumb.rs  fungible.rs  lib.rs  main.rs  names.rs  nft.rs  por.rs  reserved.rs  traits.rs  types.rs
src/rgb20/: iface.rs  info.rs  issuer.rs  mod.rs  wrapper.rs
src/rgb21/: iface.rs  issuer.rs  mod.rs  types.rs  wrapper.rs
src/rgb25/: iface.rs  info.rs  issuer.rs  mod.rs  wrapper.rs
src/stl/: asset.rs  chain.rs  mime.rs  mod.rs  specs.rs  stl.rs
stl/: RGB21@0.12.0.sta  RGB21@0.12.0.stl  RGB21@0.12.0.sty  RGBContract@0.12.0.sta  RGBContract@0.12.0.stl  RGBContract@0.12.0.sty
