[package]
name = "rgb-interfaces"
version = "0.11.0-beta.9"
description = "Collection of the standard RGB smart contract interface"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://github.com/RGB-WG"
repository = "https://github.com/RGB-WG/rgb-interfaces"
rust-version = "1.77.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "rgb-interfaces"
required-features = ["fs"]

[lib]
name = "ifaces"

[dependencies]
amplify = "4.7.0"
strict_encoding = "~2.7.0"
strict_types = "~2.7.2"
aluvm = "0.11.0-beta.9"
bp-core = "0.11.0-beta.9"
rgb-std = { version = "0.11.0-beta.9" }
chrono = "0.4.38"
serde_crate = { package = "serde", version = "1.0", optional = true }
serde_json = "1.0"
sha2 = "0.10.8"

[features]
default = []
all = ["serde", "fs"]
serde = ["serde_crate", "rgb-std/serde", "chrono/serde"]
fs = ["rgb-std/fs"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]
