[package]
name = "rgb-interfaces"
version = "0.12.0-beta.1"
description = "Collection of the standard RGB smart contract interface"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://github.com/RGB-WG"
repository = "https://github.com/RGB-WG/rgb-interfaces"
rust-version = "1.77.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "ifaces"

[dependencies]
amplify = "4.7.0"
strict_encoding = "2.8.1"
strict_types = "~2.8.1"
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []
all = ["serde"]
serde = ["dep:serde", "strict_encoding/serde"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]
