[package]
name = "rgb-interfaces"
version = "0.12.0-rc.1"
description = "Collection of the standard RGB smart contract interface"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://github.com/RGB-WG"
repository = "https://github.com/RGB-WG/rgb-interfaces"
rust-version = "1.81.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "rgb-interfaces-stl"
required-features = ["stl"]

[lib]
name = "ifaces"

[dependencies]
amplify = "4.9.0"
strict_encoding = "~2.9.1"
strict_types = "~2.9.0"
commit_verify = { version = "0.12.0-rc.1", features = ["stl"] }
bp-consensus = { version = "0.12.0-rc.1", features = ["stl"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []
all = ["stl", "serde"]
stl = ["strict_types/armor"]
serde = ["dep:serde", "strict_encoding/serde", "commit_verify/serde", "bp-consensus/serde"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom2 = { package = "getrandom", version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]
